# hashmap

./: CMakeLists.txt
include/: map.h
src/: allocator.c  hash.c  hashmap.c  utils.c
src/include/: allocator.h  hash.h  utils.h
test/: test.c  test2.c  timing.c  timing.h
